--- a/src/Signature.Web/packages.config
+++ b/src/Signature.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net462" />
   <package id="Microsoft.Web.Xdt" version="2.1.2" targetFramework="net462" />
+  <package id="Mono.Cecil" version="0.9.6.4" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net462" />
 </packages>
